--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>REST countries</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <h2> Enter country below</h2>
+    <input type ="text" id ="countryInput" placeholder="Enter country name">
+    <button onclick="fetchCountryInfo()">Submit</button>
 
+    <section id="country-info"></section>
+    <section id="bordering-countries"></section>
+
+    <script src="script.js"></script>
+
+
+</body>
+</html>
